# portfolio-advisor

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  update-market-data.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/src/app/: cli.py  main.py
backend/src/app/api/v1/: router.py
backend/src/app/api/v1/endpoints/: assets.py  chat.py  health.py  market.py  portfolios.py  risk_assessment.py  usage.py
backend/src/app/core/: config.py  database.py
backend/src/app/crud/: asset.py
backend/src/app/models/: __init__.py  api_usage_log.py  asset.py  asset_price.py  economic_indicator.py
backend/src/app/schemas/: asset.py  backtest.py  chat.py  market.py  portfolio.py  risk_assessment.py  usage.py
backend/src/app/scripts/: seed.py
backend/src/app/services/: ai_advisor.py  backtester.py  portfolio_optimizer.py  risk_profiler.py  usage_tracker.py
backend/src/app/services/data_pipeline/: __init__.py  base.py  coordinator.py  exchange_rate.py  fred.py  jquants.py  yfinance_fetcher.py
backend/tests/: conftest.py  test_backtest.py  test_portfolio.py  test_risk_assessment.py  test_usage.py
docs/: 01_architecture.md  02_database_design.md  03_api_design.md  04_frontend_design.md  05_implementation_plan.md  DEPLOYMENT.md
frontend/: Dockerfile  package.json  vitest.setup.ts
frontend/public/: manifest.json
frontend/src/app/: layout.tsx  page.tsx
(+38 files in other folders)
